test/syc/good/varlinkage.c
/*
 * Global and module-local variable
 */

int vpub;
static int vpriv;
