test/syc/bad/incomgvar.c
/*
 * Global variable has incomplete type
 */

int a[];
